--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,34 +3,105 @@ name: Build MinFFS
 on:
   push:
     branches:
-      - master   # 这里你仓库默认分支是 master 就写 master
+      - master
   workflow_dispatch:
 
 jobs:
   build:
-    runs-on: windows-latest
+    runs-on: windows-2025
 
     steps:
-      # 1. 拉取当前仓库代码
+      # 1. 拉代码
       - name: Checkout repo
         uses: actions/checkout@v4
 
-      # 2. 安装工具链（先只装最基础的）
-      - name: Install tools
+      # 2. 安装 MinGW 和 7zip（用 choco）
+      - name: Install MinGW and 7zip
         run: |
           choco install -y mingw
           choco install -y 7zip
 
-      # TODO: 这里**以后**再补 ICU / wxWidgets / Boost 的安装，
-      #       目前先不折腾，先让 Makefile 能跑起来。
+      # 3. 构建 wxWidgets 3.0.2，安装到 C:\wxWidgets-w64
+      - name: Build wxWidgets 3.0.2 (MinGW)
+        shell: pwsh
+        run: |
+          $ErrorActionPreference = "Stop"
 
-      # 3. 调用 MinGW 平台的 Makefile
+          # 下载 wxWidgets 源码 ZIP （3.0.2）
+          curl -L "https://sourceforge.net/projects/wxwindows/files/3.0.2/wxWidgets-3.0.2.zip/download" -o wxWidgets-3.0.2.zip
+
+          # 用 7zip 解压到 C:\，会得到 C:\wxWidgets-3.0.2
+          & "C:\ProgramData\chocolatey\lib\7zip\tools\7z.exe" x wxWidgets-3.0.2.zip -oC:\ -y
+
+          # 重命名成 README 里假设的路径 C:\wxWidgets-w64
+          if (Test-Path "C:\wxWidgets-w64") {
+            Remove-Item "C:\wxWidgets-w64" -Recurse -Force
+          }
+          Rename-Item -Path "C:\wxWidgets-3.0.2" -NewName "wxWidgets-w64"
+
+          # 配好环境变量（让 make 能找到 MinGW，wxWidgets 用到 WXWIN）
+          $env:WXWIN = 'C:\wxWidgets-w64'
+          $env:PATH  = "C:\ProgramData\mingw64\mingw64\bin;$env:PATH"
+
+          # 进入 wxWidgets 的 MSW 构建目录
+          Set-Location "C:\wxWidgets-w64\build\msw"
+
+          # 按 README 用 MinGW 构建：先 release 再 debug，生成 mswu / mswud 两套库
+          mingw32-make -f makefile.gcc BUILD=release SHARED=0 CXXFLAGS="-std=gnu++14"
+          mingw32-make -f makefile.gcc BUILD=debug   SHARED=0 CXXFLAGS="-std=gnu++14"
+
+      # 4. 构建 Boost 1.58.0，安装到 C:\Boost-w64
+      - name: Build Boost 1.58.0 (MinGW)
+        shell: pwsh
+        run: |
+          $ErrorActionPreference = "Stop"
+
+          # 准备临时目录
+          if (-Not (Test-Path "C:\build-boost")) {
+            New-Item -ItemType Directory -Path "C:\build-boost" | Out-Null
+          }
+
+          Set-Location "C:\build-boost"
+
+          # 下载 Boost 1.58.0 源码 ZIP
+          curl -L "https://sourceforge.net/projects/boost/files/boost/1.58.0/boost_1_58_0.zip/download" -o boost_1_58_0.zip
+
+          # 解压
+          & "C:\ProgramData\chocolatey\lib\7zip\tools\7z.exe" x boost_1_58_0.zip -oC:\build-boost -y
+
+          Set-Location "C:\build-boost\boost_1_58_0"
+
+          # 确保 MinGW 在 PATH 里，让 bootstrap.bat / b2 能找到 g++
+          $env:PATH = "C:\ProgramData\mingw64\mingw64\bin;$env:PATH"
+
+          # 走 README 的流程：bootstrap + b2 install
+          .\bootstrap.bat mingw
+
+          .\b2 toolset=gcc ^
+             variant=release ^
+             threading=multi ^
+             --prefix=C:\Boost-w64 ^
+             --without-mpi ^
+             --without-python install
+
+      # 5. 用 MinGW 平台的 Makefile 编译 MinFFS
       - name: Build MinFFS (MinGW)
         working-directory: src+builder/FreeFileSync/Platforms/MinGW
+        shell: pwsh
         run: |
-          mingw32-make all
+          $ErrorActionPreference = "Stop"
 
-      # 4. 上传生成的 MinFFS.exe
+          # 这里通过命令行覆写 Makefile 里的几个根路径，
+          # 让它用 CI 里刚装好的这些路径
+          mingw32-make -f Makefile-cmdexe.mk `
+            MINGW_ROOT=C:/ProgramData/mingw64/mingw64 `
+            WXWGT_ROOT=C:/wxWidgets-w64 `
+            BOOST_ROOT=C:/Boost-w64 `
+            BOOST_VER=1_58 `
+            BOOST_MINGW=mgw52 `
+            all
+
+      # 6. 上传生成的 MinFFS.exe
       - name: Upload MinFFS.exe
         uses: actions/upload-artifact@v4
         with:
