--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,8 +30,11 @@ jobs:
           # 下载 wxWidgets 源码 ZIP （3.0.2）
           curl -L "https://sourceforge.net/projects/wxwindows/files/3.0.2/wxWidgets-3.0.2.zip/download" -o wxWidgets-3.0.2.zip
 
-          # 用 7zip 解压到 C:\，会得到 C:\wxWidgets-3.0.2
-          & "C:\ProgramData\chocolatey\lib\7zip\tools\7z.exe" x wxWidgets-3.0.2.zip -oC:\ -y
+          # 用 PowerShell 自带的 Expand-Archive 解压到 C:\wxWidgets-3.0.2
+          if (Test-Path "C:\wxWidgets-3.0.2") {
+            Remove-Item "C:\wxWidgets-3.0.2" -Recurse -Force
+          }
+          Expand-Archive -Path "wxWidgets-3.0.2.zip" -DestinationPath "C:\" -Force
 
           # 重命名成 README 里假设的路径 C:\wxWidgets-w64
           if (Test-Path "C:\wxWidgets-w64") {
@@ -66,8 +69,11 @@ jobs:
           # 下载 Boost 1.58.0 源码 ZIP
           curl -L "https://sourceforge.net/projects/boost/files/boost/1.58.0/boost_1_58_0.zip/download" -o boost_1_58_0.zip
 
-          # 解压
-          & "C:\ProgramData\chocolatey\lib\7zip\tools\7z.exe" x boost_1_58_0.zip -oC:\build-boost -y
+          # 解压到 C:\build-boost\boost_1_58_0
+          if (Test-Path "C:\build-boost\boost_1_58_0") {
+            Remove-Item "C:\build-boost\boost_1_58_0" -Recurse -Force
+          }
+          Expand-Archive -Path "boost_1_58_0.zip" -DestinationPath "C:\build-boost" -Force
 
           Set-Location "C:\build-boost\boost_1_58_0"
 
@@ -77,11 +83,11 @@ jobs:
           # 走 README 的流程：bootstrap + b2 install
           .\bootstrap.bat mingw
 
-          .\b2 toolset=gcc ^
-             variant=release ^
-             threading=multi ^
-             --prefix=C:\Boost-w64 ^
-             --without-mpi ^
+          .\b2 toolset=gcc `
+             variant=release `
+             threading=multi `
+             --prefix=C:\Boost-w64 `
+             --without-mpi `
              --without-python install
 
       # 5. 用 MinGW 平台的 Makefile 编译 MinFFS
