--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,7 +21,7 @@ jobs:
           choco install -y mingw
           choco install -y 7zip
 
-      # 3. 构建 wxWidgets 3.0.2，安装到 C:\wxWidgets-w64
+      # 3. 构建 wxWidgets 3.0.2（不再假设路径）
       - name: Build wxWidgets 3.0.2 (MinGW)
         shell: pwsh
         run: |
@@ -39,32 +39,37 @@ jobs:
 
           Expand-Archive -Path "wxWidgets-3.0.2.zip" -DestinationPath $wxTmp -Force
 
-          # 找到解压出来的第一个子目录，当作 wxWidgets 根目录
-          $wxSub = Get-ChildItem -Path $wxTmp | Where-Object { $_.PSIsContainer } | Select-Object -First 1
-          if (-not $wxSub) {
-            throw "wxWidgets folder not found under $wxTmp"
+          # 递归查找 makefile.gcc，找到 MSW 构建目录
+          $makefile = Get-ChildItem -Path $wxTmp -Recurse -Filter "makefile.gcc" | Select-Object -First 1
+          if (-not $makefile) {
+            throw "makefile.gcc not found under $wxTmp (wxWidgets sources not as expected)"
           }
 
-          # 目标路径 C:\wxWidgets-w64，先删再移
-          $wxTarget = "C:\wxWidgets-w64"
-          if (Test-Path $wxTarget) {
-            Remove-Item $wxTarget -Recurse -Force
-          }
-          Move-Item -Path $wxSub.FullName -Destination $wxTarget
+          $mswDir = Split-Path $makefile.FullName -Parent          # ...\build\msw
+          # wx 根目录 = mswDir 的上两级
+          $buildDir = Split-Path $mswDir -Parent                   # ...\build
+          $wxRoot   = Split-Path $buildDir -Parent                 # wx 根
 
-          # 清理临时目录
-          Remove-Item $wxTmp -Recurse -Force
+          if (-not (Test-Path "$wxRoot\include") -or -not (Test-Path "$wxRoot\build")) {
+            throw "Wx root '$wxRoot' does not look like a wxWidgets source tree."
+          }
+
+          # 把 wx 根目录导出到 GITHUB_ENV，后续步骤可以用 $env:WX_ROOT
+          "WX_ROOT=$wxRoot" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
 
           # 配好环境变量（让 make 能找到 MinGW，wxWidgets 用到 WXWIN）
-          $env:WXWIN = $wxTarget
+          $env:WXWIN = $wxRoot
           $env:PATH  = "C:\ProgramData\mingw64\mingw64\bin;$env:PATH"
 
-          # 进入 wxWidgets 的 MSW 构建目录
-          Set-Location "$wxTarget\build\msw"
+          # 进入 MSW 构建目录
+          Set-Location $mswDir
 
           # 按 README 用 MinGW 构建：先 release 再 debug，生成 mswu / mswud 两套库
           mingw32-make -f makefile.gcc BUILD=release SHARED=0 CXXFLAGS="-std=gnu++14"
           mingw32-make -f makefile.gcc BUILD=debug   SHARED=0 CXXFLAGS="-std=gnu++14"
+
+          # 用完可以删临时解压目录（不删其实也无所谓）
+          Remove-Item $wxTmp -Recurse -Force
 
       # 4. 构建 Boost 1.58.0，安装到 C:\Boost-w64
       - name: Build Boost 1.58.0 (MinGW)
@@ -87,12 +92,13 @@ jobs:
           # 解压到临时目录，不假设顶层文件夹名
           Expand-Archive -Path "boost_1_58_0.zip" -DestinationPath $boostTmpRoot -Force
 
-          $boostSub = Get-ChildItem -Path $boostTmpRoot | Where-Object { $_.PSIsContainer } | Select-Object -First 1
-          if (-not $boostSub) {
-            throw "Boost folder not found under $boostTmpRoot"
+          # 找到真正的 boost 根目录（包含 bootstrap.bat 的那个）
+          $boostRootDir = Get-ChildItem -Path $boostTmpRoot -Recurse -Filter "bootstrap.bat" | Select-Object -First 1
+          if (-not $boostRootDir) {
+            throw "bootstrap.bat not found under $boostTmpRoot (Boost sources not as expected)"
           }
-
-          Set-Location $boostSub.FullName
+          $boostRoot = Split-Path $boostRootDir.FullName -Parent
+          Set-Location $boostRoot
 
           # 确保 MinGW 在 PATH 里，让 bootstrap.bat / b2 能找到 g++
           $env:PATH = "C:\ProgramData\mingw64\mingw64\bin;$env:PATH"
@@ -114,11 +120,15 @@ jobs:
         run: |
           $ErrorActionPreference = "Stop"
 
+          if (-not $env:WX_ROOT) {
+            throw "WX_ROOT is not set from previous step."
+          }
+
           # 这里通过命令行覆写 Makefile 里的几个根路径，
-          # 让它用 CI 里刚装好的这些路径
+          # 用 CI 里刚装好的这些路径
           mingw32-make -f Makefile-cmdexe.mk `
             MINGW_ROOT=C:/ProgramData/mingw64/mingw64 `
-            WXWGT_ROOT=C:/wxWidgets-w64 `
+            WXWGT_ROOT=$env:WX_ROOT `
             BOOST_ROOT=C:/Boost-w64 `
             BOOST_VER=1_58 `
             BOOST_MINGW=mgw52 `
